--- a/Prototype2/Info.plist
+++ b/Prototype2/Info.plist
@@ -2,12 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>Allow speech detection</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Allow Microphone usage </string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>GuideMe</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -46,6 +44,10 @@
 	<string>Allow access to your location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Allow access to your location</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Allow Microphone usage </string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Allow speech detection</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
